--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -2,21 +2,21 @@
 .about-container {
     position: relative;
     overflow: scroll;
-    padding-top: 170%;
+    padding-top: 155%;
 }
 
 .about-pic {
-    top: 0;
+    top: 3%;
     /* left: 20%; */
     position: absolute;
     z-index: 10;
 }
 
 #aboutCard {
-    padding: 0px;
+    padding-bottom: 0px;
     padding-left: 10px;
     padding-top: 10px;
-    border-radius: 20px;
+    padding-right: 10px;
     background-color: black;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
@@ -26,15 +26,13 @@
     border-right: 1px solid #008efe;
     line-height: 1.5;
     position: absolute;
-    top: 15%;
+    top: 35%;
     left: 0;
     width: 90%;
-    height: 75%;
+    height: 30%;
     margin-left: 15px;
+    overflow: scroll;
 }
-
-
-
 
 /* Floating Action Buttons */
 .home:hover, 
