--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,12 +76,11 @@ h2 {
 #homeLink {
   color: #fdca00;
   margin: 0px;
-  padding: 0px;
   text-align: right;
-  font-size: 12px;
+  font-size: 16px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
-  /* border-right: 1px solid #fdca00; */
+  border-right: 1px solid #fdca00;
 }
 
 #aboutLink {
