--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,3 +1,5 @@
+/* MOBILE FIRST */
+
 body {
     padding-right: 0px;
     overflow: hidden;
@@ -7,7 +9,6 @@ body {
 .carousel,
 .carousel-slider {
     margin-top: 50px;
-    /* height: 850px; */
     padding-top: 150%;
 }
 
@@ -39,16 +40,45 @@ body {
 
 .gitBtn {
     background-color: #ff0db3;
-    
+
 }
 
 .img {
     margin-bottom: 10%;
 }
 
-/* Floating Action Buttons */
-/* .home:hover, 
-.home {
-  background-color:  #008efe;
-} */
+/* TABLET PORTRAIT / DESKTOP / LAPTOP */
+@media only screen and (min-width : 768px) {
 
+    body {
+        padding-right: 3%;
+        overflow: hidden;
+    }
+
+    .carousel,
+    .carousel-slider {
+        margin-top: 1%;
+        padding-top: 41%;
+        width: 35%;
+        margin-left: 35%;
+        margin-bottom: 2%;
+        
+    }
+
+    .project-container {
+        position: relative;
+        overflow: scroll;
+        /* padding-top: 14%; */
+        width: 100%;
+    }
+
+
+
+
+
+
+
+}
+
+/* TABLET LANDSCAPE / DESKTOP WIDESCREEN */
+@media only screen and (min-width : 1500px) {}
