--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,25 +113,71 @@ h2 {
 }
 
 /* Floating Action Buttons */
-@keyframes bounce {
-
-  0%,
-  20%,
-  60%,
+/* Bob */
+@-webkit-keyframes hvr-bob {
+  0% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+  50% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+  }
   100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
   }
+}
 
-  40% {
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
+@keyframes hvr-bob {
+  0% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
   }
+  50% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+  }
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+@-webkit-keyframes hvr-bob-float {
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+@keyframes hvr-bob-float {
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+.hvr-bob {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
 
-  80% {
-    -webkit-transform: translateY(-10px);
-    transform: translateY(-10px);
-  }
+.hvr-bob:hover, .hvr-bob:focus, .hvr-bob:active {
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 .contact {
@@ -148,7 +194,6 @@ h2 {
 }
 
 .resume:hover {
-  animation: bounce 1s;
   background-color: #008efe;
 }
 
@@ -158,7 +203,6 @@ h2 {
 }
 
 .linkedIn:hover {
-  animation: bounce 1s;
   background-color: #ff0db3;
 }
 
@@ -168,7 +212,6 @@ h2 {
 }
 
 .github:hover {
-  animation: bounce 1s;
   background-color: #fdca00;
 }
 
@@ -178,7 +221,6 @@ h2 {
 }
 
 .email:hover {
-  animation: bounce 1s;
   background-color: #ff0db3;
 }
 
